Changes for 2.2.9rc1

New features:
A.F....... [ZBX-1357] updated Polish and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-8993] added error message for invalid global regular expressions in lld rules (igors)
.......PS. [ZBX-9088] fixed parsing of SNMP traps for correct processing of delayed traps (igors)
A......... [ZBX-9093] fixed API host.create method for MySQL strict mode when given partial data in "inventory" property (Ivo)
..F....... [ZBX-9168] fixed incorrect keys and unified key parameters in the item key helper (Richlv)
.......PS. [ZBX-8584] fixed vmware eventlog items sometimes returning duplicate values (wiper)
.......P.. [ZBX-9195] fixed lastlogsize and mtime being updated on proxy for unsupported items; thanks to Yoshinori Komuro for patch (asaveljevs, Sasha)
..F....... [ZBX-9010] fixed audit actions not displaying most recent logs when record count exceeds maximum (Krists)
...G...PS. [ZBX-8555] fixed 'broken pipe' errors when executing remote commands. This was happening because pipe was closed without reading from it (wiper)
.......PS. [ZBX-8828] made ICMP items go unsupported if ICMP packets cannot be sent to their host (asaveljevs)
.......PS. [ZBX-9163] fixed SNMPERR_TOO_LONG error being wrongly treated as a network error; thanks to Santal for patch (asaveljevs)
...G...... [ZBX-6047] fixed system.boottime and system.uptime returning incorrect results on Solaris zones (asaveljevs)
........S. [ZBX-9176] fixed {DISCOVERY.SERVICE.NAME} macro to expand properly for HTTPS and Telnet services (asaveljevs)
.......PS. [ZBX-9154] fixed compilation error with Oracle backend (wiper)
..F....... [ZBX-9042] unified "mass update" spelling in trigger configuration page (Richlv)
..F....... [ZBX-9153] fixed vmware.version item key being listed as vmware.eventlog in the item key helper (Richlv)
..F....... [ZBX-8405] fixed typo in item key helper for system.cpu.num item description (asaveljevs)